# QACMF

./: PROJECT_STATUS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml  hsm-config.json  production.yaml
deployments/docker/: Dockerfile
deployments/kubernetes/: qacmf-deployment.yaml
docs/: DEPLOYMENT.md  api-reference.md  developer-guide.md  framework-spec-v2.md
examples/blockchain/: dual_signing.py
examples/plugin-template/: README.md  kyber_plugin.py  plugin_template.py
examples/tls-hybrid/: README.md  hybrid_tls_demo.py
plugins/dilithium5/: __init__.py  plugin.py
plugins/kyber-1024/: __init__.py  plugin.py
scripts/: deploy.sh
src/qacmf/: __init__.py
src/qacmf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/qacmf/adapters/: __init__.py  blockchain_adapter.py  ipsec_adapter.py  ssh_adapter.py  tls_adapter.py
src/qacmf/core/: __init__.py  key_manager.py  path_chain.py  plugin_base.py  plugin_loader.py  policy_engine.py  quantum_rng.py
src/qacmf/plugins/: __init__.py  dilithium_plugin.py  kyber_plugin.py  sm2_pqc_plugin.py  xmss_plugin.py
src/qacmf/utils/: __init__.py  config_loader.py  crypto_utils.py  logging_utils.py  security_utils.py
tests/compliance/: nist_pqc_test.py  test_nist_pqc.py
tests/integration/: __init__.py  test_tls_handshake.py
tests/unit/: __init__.py  test_key_manager.py
